insert product, add to cart, view product db connectivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="lets_go">Lets Go</string>
     <string name="new_user">New user</string>
     <string name="forgot_password">Forgot Password</string>
+    <string name="todo">TODO</string>
 
-
+    <string name="title_activity_detail">DetailActivity</string>
 </resources>
