--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="phone">Phone</string>
     <string name="edit_profile">Edit Profile</string>
     <string name="my_profile1">My Profile</string>
+    <string name="checkout">Checkout</string>
 </resources>
